# ai-trading-research-lab

./: .cursorrules  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  SAFETY.md  STRATEGIES.md
docs/demo/: README.md
scripts/: run_backtest.py  run_paper_trading.py  run_scheduled_reports.py  run_telegram_bot.py  run_walk_forward.py
src/trading_lab/: __init__.py  config.py  logging_setup.py
src/trading_lab/backtest/: __init__.py  engine.py  metrics.py  walk_forward.py
src/trading_lab/claude/: __init__.py  analyze.py  client.py  prompts.py  refine.py  report.py  report_context.py  schemas.py
src/trading_lab/cli/: main.py
src/trading_lab/data/: __init__.py  bars.py  cache.py  exceptions.py  polygon_source.py  yfinance_source.py
src/trading_lab/db/: __init__.py  models.py  session.py
src/trading_lab/db/migrations/: __init__.py
src/trading_lab/execution/: __init__.py  exceptions.py  ibkr_client.py  kill_switch_store.py  order_manager.py  position_tracker.py  risk.py
src/trading_lab/runner/: __init__.py  live_loop.py  report_jobs.py  scheduler.py
src/trading_lab/strategies/: __init__.py  base.py  bbands_squeeze.py  donchian_breakout.py  rsi_mean_reversion.py
src/trading_lab/telegram_bot/: __init__.py  bot.py  handlers.py  notify.py
tests/: conftest.py
tests/helpers/: fake_ibkr.py
tests/integration/: test_backtest_flow.py  test_yfinance.py
tests/integration/fixtures/: yfinance_spy_week.parquet
tests/unit/: test_claude_client.py  test_claude_refine.py  test_claude_schemas.py  test_config_safety.py  test_data_bars.py  test_data_cache.py  test_ibkr_client.py  test_kill_switch_store.py  test_live_loop.py  test_metrics.py  test_models.py  test_order_manager.py  test_polygon_no_key.py  test_position_tracker.py  test_report_context.py  test_report_jobs_registration.py  test_risk.py  test_scheduler_runner.py  test_strategies.py  test_telegram_handlers_ibkr_thread.py  test_telegram_notify.py  test_walk_forward.py
