[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-lab"
version = "0.1.0"
description = "AI-assisted trading research lab (paper trading only)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.102.0",
    "ib-insync>=0.9.86",
    "pandas>=2.2",
    "polygon-api-client>=1.16.3",
    "pyarrow>=24.0.0",
    "pydantic-settings>=2.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0",
    "typer>=0.25.1",
    "vectorbt>=0.28.2",
    "yfinance>=1.3.0",
]

[project.scripts]
trading-lab = "trading_lab.cli.main:main"

[project.optional-dependencies]
dev = [
    "pandas-stubs>=2.2",
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.2",
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trading_lab"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests/helpers"]
testpaths = ["tests"]
filterwarnings = ["ignore:There is no current event loop:DeprecationWarning"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["trading_lab"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["yfinance.*", "polygon.*", "vectorbt.*", "ib_insync.*", "eventkit.*", "nest_asyncio.*"]
ignore_missing_imports = true
